Completing as per assignment

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,24 @@
   pointer-events: none;
 }
 
+.Currency {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 10px;
+  background-color: #1abc9c;
+  color: #fff;
+  font-size: inherit;
+  padding: .5em;
+  padding-right: 2.5em; 
+  border: 0;
+  margin: 0;
+  border-radius: 3px;
+  text-indent: 0.01px;
+  text-overflow: '';
+  -webkit-appearance: button;
+}
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
